- fixed defect AeCorrelationCombinations that would of caused a ClassCastException to be thrown - more generics